# S3NoSQLDB

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  staging_ci_cd.yml  test-1.yml  test-2.yml  tests.yml
docs/: api.rst  index.rst
examples/: basic_usage.py
s3nosqldb/: __init__.py  core.py
src/s3nosql/: __init__.py  core.py  example.ipynb  exceptions.py  utils.py
tests/: test_core.py
