# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "s3nosql"
description = "A NoSQL database implementation using Amazon S3 as storage"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Dan Zhang", email = "dan.zhang0224@gmail.com"}]
dependencies = [
    "boto3>=1.26.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.9",
    "pylint>=2.15",
    "tox>=3.24",
    "moto>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py37']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

# setup.cfg
[metadata]
name = s3nosql
description = A NoSQL database implementation using Amazon S3 as storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/s3nosql
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    boto3>=1.26.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    black>=22.0
    isort>=5.0
    mypy>=0.9
    pylint>=2.15
    tox>=3.24
    moto>=4.0

# tox.ini
[tox]
envlist = py37, py38, py39, py310, py311, lint, type
isolated_build = True

[testenv]
deps =
    pytest>=7.0
    pytest-cov>=3.0
    moto>=4.0
commands =
    pytest {posargs:tests}

[testenv:lint]
deps =
    black>=22.0
    isort>=5.0
    pylint>=2.15
commands =
    black src tests
    isort src tests
    pylint src tests

[testenv:type]
deps =
    mypy>=0.9
commands =
    mypy src
